# c-cpp-exercises

./: .gitignore  README.md
Arrays/: CMakeLists.txt  main.cpp
ArraysCalculations/: CMakeLists.txt  main.cpp
Calculator-cpp/: CMakeLists.txt  main.cpp
CountDigitsFromString/: CMakeLists.txt  main.cpp
InputNumbersDynamic/: CMakeLists.txt  main.cpp
IterateOverString/: CMakeLists.txt  main.cpp
stringUtils/: main.cpp
strings-cpp/: CMakeLists.txt  main.cpp
